# Cshells

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/models/dome01/: deployed_optimized.p  flat_optimized.p
data/models/dome02/: cshell_initial.p  deployed_initial.p  flat_initial.p
data/models/flower01/: deployed_initial.p  flat_initial.p
data/models/flower02/: deployed_initial.p  flat_initial.p
data/models/hexagon_x/: attraction_mesh.p
data/models/monkey_face/: deployed_initial.p  flat_initial.p
data/models/saddle/: surface_control_points.json
data/models/shell01/: deployed_initial.p  flat_initial.p
data/models/shell02/: cshell_initial.p  deployed_initial.p  flat_initial.p
data/models/stream/: deployed_initial.p  flat_initial.p
data/models/torus_symmetric/: deployed_initial.p  deployed_optimized.p  flat_initial.p  flat_optimized.p
data/models/tower_circ_bnd/: deployed_initial.p  flat_initial.p
data/models/tower_sq_bnd/: deployed_initial.p  flat_initial.p
ext/elastic_rods/: CMakeLists.txt  ConstraintBarrier.hh  ConvergenceReport.hh  CrossSection.cc  CrossSection.hh  CrossSectionMesh.hh  CrossSectionStressAnalysis.hh  DesignOptimizationTerms.hh  ElasticRod.cc  ElasticRod.hh  ElasticRodHessVec.inl  ElasticRodOutput.cc  LOMinAngleConstraint.hh  LinkageOptimization.hh  LinkageOptimization.inl  LinkageTerminalEdgeSensitivity.hh  PeriodicRod.hh  README.md  RectangularBox.hh  RegularizationTerms.hh  RodLinkage.cc  RodLinkage.hh  RodLinkageHessVec.inl  RodMaterial.cc  RodMaterial.hh  SurfaceAttractedLinkage.hh  TargetSurfaceFitter.cc  TargetSurfaceFitter.hh  TargetSurfaceFitterMesh.hh  XShellOptimization.hh  XShellOptimization.inl  cg_solver.hh  compute_equilibrium.hh  design_parameter_solve.hh  infer_target_surface.cc  infer_target_surface.hh  knitro.hh  knitro_solver.hh  restlen_solve.hh
ext/elastic_rods/cmake/: FindKnitro.cmake
ext/elastic_rods/cross_sections/: Custom.hh  Ellipse.hh  I.hh  L.hh  Plus.hh  Rectangle.hh
ext/elastic_rods/doc/: structural_analysis.tex
ext/elastic_rods/grasshopper/: GHModuleInstallationInstructions.txt
ext/elastic_rods/python/: bad_rod.py  cross_section_scaling.py  elasticRodsGH.py  fd_design_parameter_solve.py  finite_diff.py  init_template.py  io_redirection.py  linkage_utils.py  linkage_vis.py  linkage_vis_ipyvolume.py  open_linkage.py  structural_analysis.py  test_defo_analysis.py  test_grasshopper_bindings.py  test_linkage_florin.py  test_linkage_restlen_opt.py  test_optimize.py
ext/elastic_rods/python_bindings/: CMakeLists.txt  elastic_rods.cc  linkage_optimization.cc  linkage_optimization.hh  vector_operations.cc  visualization.hh
ext/elastic_rods/tests/: CMakeLists.txt  test_actuation_sparsifier.cc  test_elastic_rod_linkage.cc  test_elastic_rods.cc  test_linkage_optimization.cc
ext/elastic_rods/tools/: actuation_sparsifier.cc
ext/elastic_rods/writeup/: DiscreteElasticRods.bib  LinkageOptimization.tex  RodLinkages.tex  RodNetworks.tex  fd_test_t_d2.nb
ext/elastic_rods/writeup/images/: joint_geometry.pdf_tex  new_joint_parametrization.pdf_tex
ext/elastic_rods/xshell_editor/: CMakeLists.txt  xshell_editor.cc
notebooks/: StraightToCurved.ipynb  toy_linkage.ipynb
notebooks/deployments/: deployments.ipynb  deployments_torus_symmetric.ipynb
notebooks/design_optimizations/: knitro_hvp.opt  knitro_lbfgs.opt  optim_hexagon.ipynb  optim_hexagon_xshell.ipynb  optim_torus_symmetric.ipynb  optim_tower.ipynb
notebooks/planarizations/: knitro_lbfgs.opt  planarization_double_bumps.ipynb  planarization_saddle_rhombus.ipynb  planarization_saddle_square.ipynb
python/: CShell.py  CShellToJSON.py  CurvesDoFOptimizer.py  InitializationOptimizers.py  InteropGH.py  LaplacianSmoothing.py  LinkageTopologies.py  OptimalSLEquilibrium.py  ParametricFamily.py  PlanarizationOptimizers.py  PlanarizationTopology.py  RestQuantitiesOptimizer.py  StiffnessAnalysis.py  StraightLinkageToJSON.py  Symmetries.py  Utils.py  UtilsGH.py  VisUtils.py  VisUtilsCurveLinkage.py  VisUtilsDeployment.py  VisUtilsInitialization.py  open_average_angle_linkage.py
python_bindings/: CMakeLists.txt  average_angle_linkages.cc  cshell_optimization.cc  cshell_optimization.hh
src/: AverageAngleCShellOptimization.hh  AverageAngleCShellOptimization.inl  AverageAngleLinkage.cc  AverageAngleLinkage.hh  AverageAngleSurfaceAttractedLinkage.hh
